--- a/app/views/application/_groups_dropdown.html.haml
+++ b/app/views/application/_groups_dropdown.html.haml
@@ -1,7 +1,7 @@
 %li.nav-item.dropdown.left-side#groups
   %a.nav-link.dropdown-toggle.groups-dropdown-btn{href: "#", 'data-toggle' => 'dropdown'}
     %i.fa.fa-group
-    %span= t :groups
+    %span= t :"common.groups"
   %ul.dropdown-menu
     = text_field :search, :groups, class: 'group-dropdown-search', placeholder: t(:search_for_group)
     .no-groups-found 
