--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -74,3 +74,4 @@
     =render 'membership_requests', group: @group
     =render 'members', group: @group
     =render '/application/closed_motions', user: nil, group: @group
+    =render 'follow', group: @group
