--- a/app/views/groups/_follow.html.haml
+++ b/app/views/groups/_follow.html.haml
@@ -1,13 +1,12 @@
-
 - if @group.membership_for(current_user).following_by_default?
-  %i.fa.fa-volume-up
-  = link_to group_following_path(@group, following_by_default: false), method: :patch do
+  = link_to group_following_path(@group, following_by_default: false), method: :patch, class: "btn" do
+    %i.fa.fa-volume-up
     = t :".following"
   %p= t :".following_details"
 
 - else
-  %i.fa.fa-volume-down
-  = link_to group_following_path(@group, following_by_default: true), method: :patch do
+  = link_to group_following_path(@group, following_by_default: true), method: :patch, class: "btn" do
+    %i.fa.fa-volume-down
     = t :".not_following"
   %p= t :".not_following_details"
 
