--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -3,17 +3,19 @@
     .span6
       .group-title
         %h1.home-title
-          = t(:'common.dashboard')
-          link to clear filters
+          - if sifting_unread? or sifting_followed?
+            = link_to t(:'common.dashboard'), dashboard_path
+          - else
+            = t(:'common.dashboard')
 
     .span3
       .pull-right
         %strong
-          =t :'common.filter'
+          = t :'common.filter'
         %a.btn{href: toggle_unread_dashboard_path, class: unread_toggle_class}
-          =t :'common.unread'
+          = t :'common.unread'
         %a.btn{href: toggle_followed_dashboard_path, class: followed_toggle_class}
-          =t :'common.following'
+          = t :'common.following'
     .span3
       = icon_button(href: new_discussion_path, text: t(:start_a_discussion), icon: '/assets/topic-18.png', id: 'start-new-discussion', class: 'btn-grey')
 
