--- a/app/views/thread_mailer/_footer.html.haml
+++ b/app/views/thread_mailer/_footer.html.haml
@@ -1,2 +1,4 @@
-%hr
-= t :"email.thread_mailer.footer_html", link: link
+%p="--"
+%p= t :"email.thread_mailer.footer_html",
+        app_link: link,
+        preferences_link: email_preferences_url(unsubscribe_token: @recipient.unsubscribe_token)
