--- a/app/views/thread_mailer/_footer.text.haml
+++ b/app/views/thread_mailer/_footer.text.haml
@@ -1,4 +1,8 @@
 \
-\---
+\--
 = t :"email.thread_mailer.footer_text"
 = link
+\
+= t :"email.thread_mailer.change_preferences"
+= email_preferences_url( unsubscribe_token: @recipient.unsubscribe_token ).html_safe
+
