--- a/app/views/thread_mailer/new_discussion.html.haml
+++ b/app/views/thread_mailer/new_discussion.html.haml
@@ -5,12 +5,9 @@
   %body
     %p= t :"email.create_discussion.intro", who: @discussion.author.name, which_group: @discussion.group.full_name
 
-    %strong
-      = link_to @discussion.title, discussion_url(@discussion, @utm_hash)
+    %p
+      %strong= link_to @discussion.title, discussion_url(@discussion, @utm_hash)
 
-    -if @rendered_discussion_description.present?
-      = @rendered_discussion_description
+    = render_rich_text(@discussion.description, @discussion.uses_markdown)
 
-    %p= link_to t("email.view_discussion"), discussion_url(@discussion, @utm_hash)
-
-    = render 'user_mailer/unsubscribe_link', utm_hash: @utm_hash
+    = render 'footer', link: discussion_url(@discussion)
