--- a/app/views/thread_mailer/new_vote.text.haml
+++ b/app/views/thread_mailer/new_vote.text.haml
@@ -1,4 +1,4 @@
-- past_tense_position = I18n.t("position_verbs.past_tense.#{@position}")
+- past_tense_position = I18n.t("position_verbs.past_tense.#{@vote.position}")
 = "#{@vote.author.name} #{t('notifications.new_vote', position: past_tense_position)}:"
 \
 = @vote.statement
