--- a/app/views/thread_mailer/new_vote.text.haml
+++ b/app/views/thread_mailer/new_vote.text.haml
@@ -1,5 +1,2 @@
-- past_tense_position = I18n.t("position_verbs.past_tense.#{@vote.position}")
-= "#{@vote.author.name} #{t('notifications.new_vote', position: past_tense_position)}:"
-\
-= @vote.statement
+= render "vote", vote: @vote
 = render "footer", link: motion_url(@motion)
