--- a/app/views/thread_mailer/motion_closed.text.haml
+++ b/app/views/thread_mailer/motion_closed.text.haml
@@ -1,4 +1,9 @@
-= t("email.proposal_closed.intro_html", proposal_name: @motion.name)
+-if @recipient == @motion.author
+  = t(:"email.thread_mailer.specify_outcome")
+  = raw discussion_url(@motion.discussion, proposal: @motion, focus_outcome_input: "true")
+-else
+  = t(:"email.thread_mailer.proposal_closed")
 \
-= t("email.proposal_closed.specify_outcome_and_notify_group_html")
-= discussion_url(@motion.discussion, proposal: @motion, focus_outcome_input: "true").html_safe
+= render "motion_with_positions"
+\
+= render "footer", link: motion_url(@motion)
