--- a/app/views/thread_mailer/motion_closing_soon.text.haml
+++ b/app/views/thread_mailer/motion_closing_soon.text.haml
@@ -1,10 +1,11 @@
 = t(:"email.thread_mailer.motion_closing_soon")
 \
-= link_to @motion.name, motion_url(@motion)
+= @motion.name
 \
--if @rendered_motion_description.present?
-  = @rendered_motion_description
+= @motion.description
 \
 - unless @motion.user_has_voted?(@user)
   = t(:"help.have_your_say")
   = motion_url(@motion)
+
+= render "footer", link: motion_url(@motion)
