--- a/app/views/thread_mailer/motion_outcome_created.html.haml
+++ b/app/views/thread_mailer/motion_outcome_created.html.haml
@@ -1,29 +1,6 @@
-= render '/application/mailer_doctype'
-%html
-  %head
-    = stylesheet_link_tag 'email'
-  %body.proposal-outcome
-    %h1.outcome-header= t(:outcome)
-    %p= @motion.outcome
+= t(:"email.thread_mailer.outcome_created", who: @motion.outcome_author.name)
+%p= @motion.outcome
 
-    %h1.outcome-header= t(:proposal)
-    %p= link_to @motion.name, motion_url(@motion, @utm_hash)
-    = render_rich_text(@motion.description, false)
+= render 'motion_with_positions'
 
-    -if @motion.unique_votes.present?
-      %h2.outcome-subheader= t(:positions).capitalize
-      %table
-        -last_vote = @motion.unique_votes.last
-        -@motion.unique_votes.each do |vote|
-          %tr{ :class => ("cell-border-bottom" unless vote==last_vote) }
-            %td= vote.user_name
-            %td.proposal-position{class: vote.position.to_s}= vote.position_to_s
-            %td
-              -if vote.statement.present?
-                = vote.statement
-
-    %p.proposal-details= t(:proposal_closed_when, when: time_ago_in_words(@motion.closed_at))
-    %p.proposal-details= t(:proposed_when_by_who, when: time_ago_in_words(@motion.created_at), who: @motion.author_name)
-    %p.proposal-details= t(:engagement_on_closed_proposal, percent: @motion.percent_voted, :numerator => (@motion.group_size_when_voting - @motion.members_not_voted_count), denominator:  @motion.group_size_when_voting)
-
-    = render 'user_mailer/unsubscribe_link'
+= render 'footer', link: motion_url(@motion)
