--- a/app/views/thread_mailer/new_vote.html.haml
+++ b/app/views/thread_mailer/new_vote.html.haml
@@ -1,8 +1,2 @@
-%img{src: vote_icon_paths_helper(@vote.position)}
-%strong= @vote.author.name
-- past_tense_position = I18n.t("position_verbs.past_tense.#{@vote.position}")
-= t('notifications.new_vote', position: past_tense_position) + ":"
-%br
-= render_email_plaintext @vote.statement
-
+= render "vote", vote: @vote
 = render "footer", link: motion_url(@motion)
