--- a/app/views/thread_mailer/motion_closing_soon.text.haml
+++ b/app/views/thread_mailer/motion_closing_soon.text.haml
@@ -8,4 +8,4 @@
   = t(:"help.have_your_say")
   = motion_url(@motion)
 
-= render "footer", link: motion_url(@motion)
+= render "footer", link: motion_url(@motion, @utm_hash)
