--- a/app/views/thread_mailer/motion_outcome_created.text.haml
+++ b/app/views/thread_mailer/motion_outcome_created.text.haml
@@ -3,4 +3,4 @@
 \
 = render 'motion_with_positions'
 \
-= render 'footer', link: motion_url(@motion)
+= render 'footer', link: motion_url(@motion, @utm_hash)
