--- a/app/views/user_mailer/group_membership_approved.html.haml
+++ b/app/views/user_mailer/group_membership_approved.html.haml
@@ -5,4 +5,4 @@
   %body
     %p= t("email.group_membership_approved.intro", group_name: @group.name)
 
-    %p= link_to(t("email.view_group"), group_url(@group))
+    %p= link_to(t("email.view_group"), group_url(@group, @utm_hash))
