--- a/app/views/group_mailer/group_email.html.haml
+++ b/app/views/group_mailer/group_email.html.haml
@@ -3,4 +3,4 @@
   %p= t("email.group_email.intro", who: @sender.name, group: @group.name)
 
   %p.comment= @message
-  %p= link_to(t("email.view_group"), group_url(@group))
+  %p= link_to(t("email.view_group"), group_url(@group, @utm_hash))
