--- a/app/views/invite_people_mailer/after_membership_request_approval.html.haml
+++ b/app/views/invite_people_mailer/after_membership_request_approval.html.haml
@@ -7,4 +7,4 @@
     %p
       = t(:"invitation.link_help", group: @invitation.invitable_name)
       %br
-      = link_to invitation_url(@invitation), invitation_url(@invitation)
+      = link_to invitation_url(@invitation), invitation_url(@invitation, @utm_hash)
