--- a/app/views/invite_people_mailer/after_membership_request_approval.text.haml
+++ b/app/views/invite_people_mailer/after_membership_request_approval.text.haml
@@ -1,4 +1,4 @@
 = t("email.group_membership_approved.intro", group_name: @group.name)
 \
 = t(:"invitation.link_help", group: @invitation.invitable_name)
-= invitation_url(@invitation)
+= invitation_url(@invitation, @utm_hash)
