--- a/app/views/invite_people_mailer/to_join_group.html.haml
+++ b/app/views/invite_people_mailer/to_join_group.html.haml
@@ -8,4 +8,4 @@
     %p
       =t(:"invitation.link_help", group: @invitation.invitable_name)
       %br
-      = link_to "#{invitation_url(@invitation)}", invitation_url(@invitation)
+      = link_to "#{invitation_url(@invitation)}", invitation_url(@invitation, @utm_hash)
