--- a/app/views/invite_people_mailer/to_start_group.html.haml
+++ b/app/views/invite_people_mailer/to_start_group.html.haml
@@ -7,7 +7,7 @@
 
     %p= t("email.invitation.intro", group_name: @invitation.invitable_name)
 
-    = link_to "#{invitation_url(@invitation)}", invitation_url(@invitation)
+    = link_to "#{invitation_url(@invitation)}", invitation_url(@invitation, @utm_hash)
 
     %p= t("email.invitation.closing_message")
 
