--- a/app/views/thread_mailer/_footer.text.haml
+++ b/app/views/thread_mailer/_footer.text.haml
@@ -4,5 +4,5 @@
 = link
 \
 = t :"email.thread_mailer.change_preferences"
-= email_preferences_url( unsubscribe_token: @recipient.unsubscribe_token ).html_safe
+=raw email_preferences_url(@utm_hash.merge(unsubscribe_token: @recipient.unsubscribe_token))
 
