--- a/app/views/thread_mailer/_motion.html.haml
+++ b/app/views/thread_mailer/_motion.html.haml
@@ -6,7 +6,7 @@
       %td.content
         %h3
           = t(:proposal)+":"
-          = link_to motion.name, motion_url(motion)
+          = link_to motion.name, motion_url(motion, @utm_hash)
         %p
           %em= t(:"email.by_who", person: motion.author.name)
 
