--- a/app/views/thread_mailer/_vote_buttons.html.haml
+++ b/app/views/thread_mailer/_vote_buttons.html.haml
@@ -1,15 +1,15 @@
 = link_to t(:"position_verbs.yes").capitalize,
-          new_motion_vote_url( motion, position: 'yes'),
+          new_motion_vote_url( motion, @utm_hash.merge(position: 'yes')),
           class: 'yes-link'
 = " - "
 = link_to t(:"position_verbs.abstain").capitalize,
-          new_motion_vote_url( motion, position: 'abstain'),
+          new_motion_vote_url( motion, @utm_hash.merge(position: 'abstain')),
           class: 'abstain-link'
 = " - "
 = link_to t(:"position_verbs.no").capitalize,
-          new_motion_vote_url( motion, position: 'no'),
+          new_motion_vote_url( motion, @utm_hash.merge(position: 'no')),
           class: 'no-link'
 = " - "
 = link_to t(:"position_verbs.block").capitalize,
-          new_motion_vote_url( motion, position: 'block'),
+          new_motion_vote_url( motion, @utm_hash.merge(position: 'block')),
           class: 'block-link'
