--- a/app/views/thread_mailer/motion_closing_soon.html.haml
+++ b/app/views/thread_mailer/motion_closing_soon.html.haml
@@ -1,5 +1,5 @@
 %p= t(:"email.thread_mailer.motion_closing_soon")
-%h4= link_to @motion.name, motion_url(@motion)
+%h4= link_to @motion.name, motion_url(@motion, @utm_hash)
 
 %table
   %tr
@@ -12,4 +12,4 @@
   %h4= t(:"help.have_your_say")
   =render 'vote_buttons', motion: @motion
 
-= render "footer", link: motion_url(@motion)
+= render "footer", link: motion_url(@motion, @utm_hash)
