--- a/app/views/thread_mailer/new_discussion.text.haml
+++ b/app/views/thread_mailer/new_discussion.text.haml
@@ -5,4 +5,4 @@
 \
 = @discussion.description
 \
-= render 'footer', link: discussion_url(@discussion)
+= render 'footer', link: discussion_url(@discussion, @utm_hash)
