--- a/app/views/user_mailer/_unsubscribe_link_text.text.haml
+++ b/app/views/user_mailer/_unsubscribe_link_text.text.haml
@@ -1,4 +1,4 @@
 = '---------------------------------------------------------------------------'
 
 = t("email.unsubscribe")
-= email_preferences_url( unsubscribe_token: @recipient.unsubscribe_token ).html_safe
+= email_preferences_url( @utm_hash.merge(unsubscribe_token: @recipient.unsubscribe_token)).html_safe
