--- a/app/views/user_mailer/added_to_group.html.haml
+++ b/app/views/user_mailer/added_to_group.html.haml
@@ -5,4 +5,4 @@
   %body
     %p= t("email.user_added_to_a_group.content", which_group: @group.name, who: @inviter.name)
     %p= @message
-    %p= link_to group_url(@group), group_url(@group)
+    %p= link_to group_url(@group), group_url(@group, @utm_hash)
