--- a/app/views/user_mailer/group_membership_approved.text.haml
+++ b/app/views/user_mailer/group_membership_approved.text.haml
@@ -1,4 +1,4 @@
 = t("email.group_membership_approved.intro", group_name: @group.name)
 \
 = "#{t('email.view_group')}:"
-= group_url(@group)
+= group_url(@group, @utm_hash)
