--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -10,12 +10,7 @@
 
     .span3
       .pull-right
-        %strong
-          = t :'common.filter'
-        %a.btn{href: toggle_unread_dashboard_path, class: unread_toggle_class}
-          = t :'common.unread'
-        %a.btn{href: toggle_followed_dashboard_path, class: followed_toggle_class}
-          = t :'common.following'
+        =render 'filter_discussions_buttons'
     .span3
       = icon_button(href: new_discussion_path, text: t(:start_a_discussion), icon: '/assets/topic-18.png', id: 'start-new-discussion', class: 'btn-grey')
 
