styling; add description to thread following buttons

--- a/app/assets/stylesheets/unstructured/_dashboard.css.scss
+++ b/app/assets/stylesheets/unstructured/_dashboard.css.scss
@@ -5,6 +5,9 @@ body.dashboard {
       li { line-height: 21px; }
       .sub-group .group-link-name { padding-left: 20px; }
     }
+    .group-title{
+      margin: 0;
+    }
   }
   .no-groups {
     margin-top: 20px;
