--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -42,7 +42,8 @@
         .edit-icon-placeholder
       .logo-placeholder
       ~ render_rich_text(@group.description)
-    =render 'discussions/discussion_list'
+    = render "application/filter_discussions_buttons"
+    = render 'discussions/discussion_list'
 
   .span3
     #group-actions
@@ -54,7 +55,7 @@
 
       = join_group_button(@group)
     = render 'setup_next_steps' if show_next_steps?(@group)
-    =render 'follow', group: @group
+    = render 'follow', group: @group
 
     = render 'subgroups', group: @group
 
@@ -71,6 +72,6 @@
                   .previous-decision-title.word-break=truncate(motion.name, :length => 60, :separator => ' ')
           = link_to t(:see_more), group_motions_path(@group), class: 'bottom-panel-link'
 
-    =render 'membership_requests', group: @group
-    =render 'members', group: @group
-    =render '/application/closed_motions', user: nil, group: @group
+    = render 'membership_requests', group: @group
+    = render 'members', group: @group
+    = render '/application/closed_motions', user: nil, group: @group
