--- a/app/views/application/_filter_discussions_buttons.html.haml
+++ b/app/views/application/_filter_discussions_buttons.html.haml
@@ -1,5 +1,15 @@
-= t :'common.filter'
-%a.btn.btn-small{href: toggle_unread_path, class: unread_toggle_class}
-  = t :'common.unread'
-%a.btn.btn-small{href: toggle_followed_path, class: followed_toggle_class}
-  = t :'common.following'
+.filter-discussion-list-buttons.pull-right
+  = t :'common.filter'
+  - if sifting_unread?
+    %a.btn.btn-small.js-tooltip.active{href: toggle_unread_path, title: t(:'discussion_list.filter_unread.disable')}
+      = t :'common.unread'
+  -else
+    %a.btn.btn-small.js-tooltip{href: toggle_unread_path, title: t(:'discussion_list.filter_unread.enable')}
+      = t :'common.unread'
+
+  - if sifting_followed?
+    %a.btn.btn-small.js-tooltip.active{href: toggle_followed_path, title: t(:'discussion_list.filter_followed.disable')}
+      = t :'common.following'
+  -else
+    %a.btn.btn-small.js-tooltip{href: toggle_followed_path, title: t(:'discussion_list.filter_followed.enable')}
+      = t :'common.following'
