--- a/app/views/thread_mailer/_footer.html.haml
+++ b/app/views/thread_mailer/_footer.html.haml
@@ -2,7 +2,8 @@
                                       event_id: @event.id,
                                       unsubscribe_token: @recipient.unsubscribe_token,
                                       format: 'gif'), alt: '', width: 1, height: 1}
-%p="--"
-%p= t :"email.thread_mailer.footer_html",
+\--
+%br
+= t :"email.thread_mailer.footer_html",
         app_link: link,
         preferences_link: email_preferences_url(@utm_hash.merge(unsubscribe_token: @recipient.unsubscribe_token))
