only show filters to people with discussion readers

--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -42,7 +42,7 @@
         .edit-icon-placeholder
       .logo-placeholder
       ~ render_rich_text(@group.description)
-    = render "application/filter_discussions_buttons"
+    = render "application/filter_discussions_buttons" if can? :follow, @group
     = render 'discussions/discussion_list'
 
   .span3
