--- a/app/views/groups/_follow.html.haml
+++ b/app/views/groups/_follow.html.haml
@@ -1,11 +1,11 @@
 - if can? :follow, @group
   - if @group.membership_for(current_user).following_by_default?
-    = link_to unfollow_group_path(@group), method: :post, class: "btn js-tooltip", title: t(:"groups.follow.click_to_unfollow") do
+    = link_to unfollow_group_path(@group), method: :post, class: "btn js-tooltip cuke-unfollow-group", title: t(:"groups.follow.click_to_unfollow") do
       %i.fa.fa-volume-up
       = t :"common.following"
     %p= t :".following_details"
   - else
-    = link_to follow_group_path(@group), method: :post, class: "btn js-tooltip", title: t(:"groups.follow.click_to_follow") do
+    = link_to follow_group_path(@group), method: :post, class: "btn js-tooltip cuke-follow-group", title: t(:"groups.follow.click_to_follow") do
       %i.fa.fa-volume-down
       = t :"common.not_following"
     %p= t :".not_following_details"
