--- a/app/views/application/_filter_discussions_buttons.html.haml
+++ b/app/views/application/_filter_discussions_buttons.html.haml
@@ -2,14 +2,14 @@
   .filter-discussion-list-buttons.pull-right
     = t :'common.filter'
     - if sifting_unread?
-      %a.btn.btn-small.js-tooltip.active{href: toggle_unread_path, title: t(:'discussion_list.filter_unread.disable')}
+      %a.btn.btn-small.js-tooltip.btn-success.active{href: toggle_unread_path, title: t(:'discussion_list.filter_unread.disable')}
         = t :'common.unread'
     -else
       %a.btn.btn-small.js-tooltip{href: toggle_unread_path, title: t(:'discussion_list.filter_unread.enable')}
         = t :'common.unread'
 
     - if sifting_followed?
-      %a.btn.btn-small.js-tooltip.active{href: toggle_followed_path, title: t(:'discussion_list.filter_followed.disable')}
+      %a.btn.btn-small.js-tooltip.btn-success.active{href: toggle_followed_path, title: t(:'discussion_list.filter_followed.disable')}
         = t :'common.following'
     -else
       %a.btn.btn-small.js-tooltip{href: toggle_followed_path, title: t(:'discussion_list.filter_followed.enable')}
