--- a/app/views/users/_avatar_setting_option.html.haml
+++ b/app/views/users/_avatar_setting_option.html.haml
@@ -2,6 +2,5 @@
   = link_to set_avatar_kind_user_path(user, :avatar_kind => kind), :method => :put, id: "use_#{kind}" do
     %span
       = render 'avatar', user: user, kind: kind, id: "image-option-#{kind}"
-      - option_label = t("profile_form.use_avatar_kind", kind: kind)
-      - option_label += " image" if kind == "uploaded"
+      - option_label = t("profile_form.use_" + kind.to_s)
       .option-label= option_label
