--- a/app/assets/stylesheets/unstructured/index.css.scss
+++ b/app/assets/stylesheets/unstructured/index.css.scss
@@ -1,3 +1,5 @@
+@import "font-awesome-sprockets";
+@import "font-awesome";
 @import "bootstrap/mixins";
 @import "settings";
 @import "loomio_theme";
