--- a/app/views/application/_inbox.html.haml
+++ b/app/views/application/_inbox.html.haml
@@ -1,4 +1,4 @@
 %li.nav-item.left-side#inbox-container
-  %a.nav-link{href: dashboard_path({unread: true})}
+  %a.nav-link{href: inbox_path}
     %i.fa.fa-inbox
     %span#inbox-count.label
