--- a/app/views/thread_mailer/_vote.html.haml
+++ b/app/views/thread_mailer/_vote.html.haml
@@ -1,6 +1,6 @@
 %img{src: vote_icon_paths_helper(vote.position)}
 %strong= vote.author.name
 - past_tense_position = I18n.t("position_verbs.past_tense.#{vote.position}")
-= t('notifications.new_vote', position: past_tense_position) + ":"
+= t('notifications.new_vote', position: past_tense_position) + ": " + @motion.title
 %br
 = render_email_plaintext vote.statement
